ipc/ipdl/test/ipdl/error/trans_WrongName2.ipdl
protocol trans_WrongName2 {

parent:
    Msg();

state S1:
    answer Msg goto S1;

};
